# soft_cooling_system_submodule_cpp

./: .gitmodules  CMakeLists.txt  README.md
config/: ph_config.yaml
dependencies/Dep/meteor/: CMakeLists.txt
dependencies/Dep/meteor/src/: meteorAdapter.cpp
includes/: Iph_xy_motion.h  linear_motion.h  ph_cooling_controller.h  ph_linear_motion.h  ph_rotation_motion.h  ph_trigger.h  ph_xy_motion.h  rotation_motion.h
src/: Iph_axis_motion.cpp  Iph_rotation.cpp  main.cpp  ph_cooling_controller.cpp  ph_linear_motion.cpp  ph_rotation_motion.cpp  ph_trigger.cpp  ph_xy_motion.cpp  rotation_motion.cpp
tests/: CMakeLists.txt  main.cpp  meteor_server.py  motion_server.py  phControllerTest.h  phMeteorSDKTest.h  phMotionTest.h  phTriggerTest.h  run_phMotionTests.py  trigger_server.py
